rgbds-0.6.1/test/asm/duplicate-section.asm

SECTION "sec", ROM0

SECTION "sec", ROM0
